# pycairotk

./: LICENSE  README.md  pyproject.toml
examples/: animated.py  clock.py  demo.py  figure_1.py  figure_2.py  py_chart.py
src/pycairotk/: __init__.py  __init__.pyi  pycairotk.py  pycairotk.pyi  pycolor.py  pycolor.pyi
